Moved library display code into it's own activity because it's simpler I guess.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.thehoick.evergreenflixq.MainActivity" />
         </activity>
+        <activity
+            android:name=".LibrariesActivity"
+            android:label="@string/title_activity_libraries"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.thehoick.evergreenflixq.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
